// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test basics.md 1`] = `
<div>
  <div
    class="leke-alert-container leke-alert-container-success"
  >
    <div
      class="leke-alert-context"
    >
      <div
        class="leke-alert-message"
      >
        <span
          class="text"
        >
          这是一个很短的提示
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example1.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-success"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            这是一个很短的提示
          </span>
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            这是一个很短的提示
          </span>
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            这是一个很短的提示
          </span>
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            这是一个很短的提示
          </span>
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example2.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-success leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          这是一个标题
        </div>
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            这是一个很短的提示这是一个很短的提示这是一个很短的提示这是一
                    个很短的提示这是一个很短的提示这是一个很短的提示这是一个很短
                    的提示这是一个很短的提示这是一个很短的提示这是一个很短的提示
                    这是一个很短的提示这是一个很短的提示这是一个很短的提示这是
                    一个很短的提示这是一个很短的提示这是一个很短的提示这是一个
                    很短的提示这是一个很短的提示这是一个很短的提示这是一个很
                    短的提示这是一个很短的提示
          </span>
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title ellipsis"
        >
          这是一个标题
        </div>
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            这是一个很短的提示这是
          </span>
          <span
            class="leke-alert-message-text-btn"
          >
            你好的按钮
          </span>
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          这是一个标题
        </div>
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            
                    这是一个很短的提示这是一个很短的提示这是一个很短的提示这
                    是一个很短的提示这是一个很短的提示这是一个很短的提示这是
                    一个很短的提示这是一个很短的提示这是一个很短的提示这是
                    一个很短的提示这是一个很短的提示这是一个很短的提示这是
                    一个很短的提示这是一个很短的提示这是一个很短的提示这是
                    一个很短的提示这是一个很短的提示这是一个很短的提示这是一个
                    很短的提示这是一个很短的提示这是一个很短的提示这是一
                    个很短的提示这是一个很短的提示
                  
          </span>
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          这是一个标题
        </div>
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            这是一个很短的提示这是一个很短的提示这是一个很短的
                    提示这是一个很短的提示这是一个很短的提示这是一个很短的
                    提示这是一个很短的提示这是一个很短的提示这是一个很短的提
                    示这是一个很短的提示这是一个很短的提示这是一个很短
                    的提示这是一个很短的提示
          </span>
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example3.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-success leke-alert-has-title-container"
      style="width: 600px;"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M951.865 186.823c74.752 0 92.501 43.236 39.708 95.915L581.746 771.982c-53.02 52.68-80.555 52.68-133.575 0L37.888 282.624c-52.68-52.68-34.93-95.915 39.708-95.915h874.269v.114z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title ellipsis"
        >
          设置标题设置标题设置标题设置标题设置标题设置标题设置标题设置标题设置标题设置标题设置标题设置标题
        </div>
        <div
          class="leke-alert-message"
        >
          <span
            class="text"
          >
            这是一个很短的提示这是一个很短的提示这是一个很短的提示这是一
                    个很短的提示这是一个很短的提示这是一个很短的提示这是一个很短
                    的提示这是一个很短的提示这是一个很短的提示这是一个很短的提示
                    这是一个很短的提示这是一个很短的提示这是一个很短的提示这是
                    一个很短的提示这是一个很短的提示这是一个很短的提示这是一个
                    很短的提示这是一个很短的提示这是一个很短的提示这是一个很
                    短的提示这是一个很短的提示
          </span>
          <span
            class="leke-alert-message-text-btn"
          >
            我的按钮
          </span>
        </div>
      </div>
      <div
        class="leke-alert-action-box"
      >
        <div
          class="leke-alert-action-item"
        >
          <button>
            12321312
          </button>
        </div>
        <div
          class="leke-alert-action-item"
        >
          <button>
            12321312
          </button>
        </div>
        <div
          class="leke-alert-action-item"
        >
          <button>
            12321312
          </button>
        </div>
        <div
          class="leke-alert-action-item"
        >
          <button>
            12321312
          </button>
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M900.823 260.277c-19.01 0-34.331 15.432-34.331 34.331v617.51c0 18.898-15.32 34.33-34.331 34.33H191.839c-18.899 0-34.33-15.32-34.33-34.33v-617.51c0-19.01-15.433-34.33-34.332-34.33-15.656 0-29.298 10.623-33.212 25.72l.335.111c-.67 4.585-.783 12.972-.783 29.634l-.112 70.675c-.111 58.486-.223 136.317-.223 214.26-.224 155.776-.336 311.551-.336 311.551 0 56.808 46.185 102.993 102.993 102.993h640.434c56.808 0 102.993-46.185 102.993-102.993V294.61c-.112-18.9-15.433-34.332-34.443-34.332z"
            />
            <path
              d="M353.317 845.021c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c0 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064zm616.28-744.88H710.94l-80.962-80.963c-6.934-6.821-16.104-10.624-25.609-10.4H419.966c-9.505.112-18.898 3.579-25.72 10.4l-80.963 80.963H54.515c-19.01 0-34.33 15.432-34.33 34.33s15.432 34.444 34.33 34.444h275.766c10.064 0 18.899-3.579 25.72-10.4l80.963-80.963h149.96l80.963 80.963c6.821 6.821 16.215 10.511 25.72 10.4h275.766c19.01 0 34.33-15.433 34.33-34.331.113-18.9-15.208-34.443-34.107-34.443zm-433.33 744.88c6.485-6.486 10.064-15.097 10.064-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.33 15.432-34.33 34.33v503.223c-.113 18.898 15.32 34.33 34.33 34.33 9.17-.111 17.78-3.578 24.266-10.064zm183.06 0c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c-.112 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;
